third_party/move/move-compiler-v2/tests/checking/dotdot/assign.exp

Diagnostics:
error: unexpected token
   ┌─ tests/checking/dotdot/assign.move:11:6
   │
11 │         S1(..) = x;
   │            ^^
   │            │
   │            Unexpected '..'
   │            Expected an expression term
